bk-restaurant-listing-page -> 	Add Restaurant Listing page 	Add mvvm-cleancode classes for restaurant list 	Add assets and json files 	Add Room integration

--- a/food-delivery-app/app/build.gradle
+++ b/food-delivery-app/app/build.gradle
@@ -103,8 +103,11 @@ dependencies {
     implementation lifecycle
     implementation network
     implementation dagger
+    implementation roomImplementation
 
     kapt commonKapt
+    kapt roomKapt
+    annotationProcessor roomAnnotationProcessor
     kaptTest commonKapt
     debugImplementation commonDebug
     testImplementation commonTest
