bk-ui-refactor -> Refactor ui

--- a/food-delivery-app/app/src/main/AndroidManifest.xml
+++ b/food-delivery-app/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bkarakoca.fooddeliveryapp">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,9 +17,10 @@
 
         <activity
             android:name="com.bkarakoca.fooddeliveryapp.scene.main.MainActivity"
-            android:screenOrientation="fullSensor"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:exported="true">
+            android:exported="true"
+            tools:ignore="LockedOrientationActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
